# land

./: Cargo.toml  README.md  set.sh  setup.sh
channel/: Cargo.toml  README.md
channel/src/: barrier.rs  error.rs  lib.rs  ringbuffer.rs
channel/src/common/: backoff.rs  disconnect.rs  mod.rs
channel/src/mpsc/: batch.rs  consumer.rs  mod.rs  producer.rs  shared.rs
channel/src/spsc/: batch.rs  consumer.rs  mod.rs  producer.rs  shared.rs
core/: Cargo.toml
core/examples/: test_sender.rs
core/src/: config.rs  lib.rs  main.rs  warmup.rs
cpu/: Cargo.toml
cpu/src/: affinity.rs  cache_padded.rs  cursor.rs  error.rs  fence.rs  lib.rs  prefetch.rs  topology.rs  wait_strategy.rs
leader/: Cargo.toml
leader/examples/: example.rs  example_tokio.rs  slot_subscriber.rs
leader/src/: config.rs  leader_buffer.rs  leader_entry.rs  lib.rs  schedule_fetcher.rs  slot_subscriber.rs  tracker.rs
pubsub/: Cargo.toml
pubsub/examples/: subscribe.rs
pubsub/src/: error.rs  lib.rs  parser.rs  subscriber.rs  types.rs  websocket.rs
quic/: Cargo.toml  arch.sh
quic/src/: config.rs  connection.rs  endpoint.rs  error.rs  io_uring_backend.rs  lib.rs  pool.rs  prewarm.rs  sender.rs  session_cache.rs  strategy.rs  timing_registry.rs  tls.rs
server/: Cargo.toml
server/examples/: simple_server.rs  stress_test.rs
server/src/: config.rs  date.rs  error.rs  http.rs  lib.rs  queue.rs  request.rs  server.rs  worker.rs
sync/: Cargo.toml
sync/examples/: bench_zerocopy.rs
sync/src/: lib.rs  seqlock.rs
timing/: Cargo.toml
traits/: Cargo.toml
traits/src/: lib.rs
unroll/: Cargo.toml  README.md
unroll/examples/: latency.rs
unroll/src/: lib.rs  unroll.rs
