[package]
name = "land-core"
version = "0.1.0"
edition = "2024"
description = "land transaction sender core"

[[bin]]
name = "land-core"
path = "src/main.rs"

[dependencies]
land-leader = { path = "../leader" }
land-quic = { path = "../quic" }
land-cpu = { path = "../cpu" }
land-server = { path = "../server2" }
land_traits = { path = "../traits" }
tokio = { version = "1", features = ["rt", "macros", "signal", "time"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
solana-sdk = "3"
solana-client = "3"
solana-commitment-config = "3"
solana-compute-budget-interface = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
bincode = "1.3"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "test_sender"
path = "examples/test_sender.rs"
