[package]
name = "land-leader"
version = "0.1.0"
edition = "2024"

[dependencies]
# solana v3
solana-sdk = "3.0"
solana-client = "3.0"

tokio = { version = "1.48.0", features = ["full"] }

# sync
arc-swap = "1.7"

# remove
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# land-* crates
land-cpu = { path = "../cpu" }
land-pubsub = { path = "../pubsub" }
land-channel = { path = "../channel" }

# shared traits
land_traits = { path = "../traits" }
serde_json = "1.0.148"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
